--- a/app/src/main/res/layout/fragment_new_profile.xml
+++ b/app/src/main/res/layout/fragment_new_profile.xml
@@ -44,28 +44,26 @@
                 android:minHeight="48dp"
                 android:layout_weight="1"/>
 
-            <!--<com.gc.materialdesign.views.ButtonFlat-->
-                <!--android:id="@+id/buttonChangeDate"-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="match_parent"-->
-                <!--android:background="@color/app_orange"-->
-                <!--android:text="@string/change"-->
-                <!--android:layout_gravity="right"-->
-                <!--android:padding="5dp"-->
-                <!--android:layout_weight="3"-->
-                <!--/>-->
         </LinearLayout>
 
 
 
-        <com.gc.materialdesign.views.ButtonRectangle
+        <RelativeLayout
             android:id="@+id/buttonValidation"
             android:layout_width="250dp"
-            android:layout_height="wrap_content"
-            android:background="@color/app_orange"
-            android:text="@string/validate"
-            android:layout_gravity="center"
-            android:layout_marginTop="10dp"/>
+            android:layout_height="50dp"
+            android:layout_gravity="center_horizontal"
+            android:background="@drawable/round_background_normal"
+            android:layout_marginTop="20dp">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/validate"
+                android:layout_centerInParent="true"
+                android:gravity="center"
+                android:textColor="@color/normal_white"
+                android:textSize="20dp"/>
+        </RelativeLayout>
 
 
     </LinearLayout>
