--- a/app/src/main/res/layout/fragment_subjects.xml
+++ b/app/src/main/res/layout/fragment_subjects.xml
@@ -1,5 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:materialdesign="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.principal.projetolivia.main.SubjectsFragment">
@@ -35,21 +36,40 @@
         android:background="#7aa552"
         android:id="@id/profile">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="User"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:id="@+id/userName"
-            android:clickable="true"/>
 
-        <ImageButton
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:src="@drawable/options"
-            android:background="@null"
-            android:scaleType="fitXY"/>
+        <com.gc.materialdesign.views.ButtonFloat
+            android:id="@+id/buttonOptions"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            materialdesign:animate="false"
+            materialdesign:iconDrawable="@drawable/options"/>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:layout_alignParentRight="true">
+
+            <TextView
+                android:id="@+id/userNameText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="User"
+                android:layout_gravity="center_vertical"
+                android:paddingRight="20dp"
+                android:textSize="20dp"
+                android:textColor="@color/normal_white"
+                />
+
+            <com.gc.materialdesign.views.ButtonFloat
+                android:id="@+id/userName"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                materialdesign:animate="false"
+                materialdesign:iconDrawable="@drawable/ombre_blanche_olivia"/>
+        </LinearLayout>
+
+
+
     </RelativeLayout>
 
 </RelativeLayout>
